--- a/content/introducing-aiden-vincent/index.mdx
+++ b/content/introducing-aiden-vincent/index.mdx
@@ -7,14 +7,14 @@ updatedAt: "2024-02-26"
 author: "ConquerortheCrown Team"
 isPublished: true
 tags:
-- money
+- money 
 - rat race
 
 ---
 
 ## Meet Aiden Vincent
 
-Your new digital buddy created by Conquerorthecrown (CTC).
+Your new digital buddy created by Conquerorthecrown.
 
 He’s not your typical AI — he’s here to help you make sense of making money and finding your way out of the daily grind.
 
