--- a/content/what-is-conquerorthecrown-and-how-can-i-use-it/index.mdx
+++ b/content/what-is-conquerorthecrown-and-how-can-i-use-it/index.mdx
@@ -100,7 +100,7 @@ However its can be accessed via webapp and app from [ConquerortheCrown](https://
 ConquerortheCrown is founded by 17 year old Abhinav Sharma. 
 
 <Image
-  src="/blogs/founder.jpeg"
+  src="/blogs/founder.jpg"
   width="218"
   height="204"
   alt="Image"
