--- a/content/what-is-conquerorthecrown-and-how-can-i-use-it/index.mdx
+++ b/content/what-is-conquerorthecrown-and-how-can-i-use-it/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Getting Started with ConquerortheCrown"
-description: "What is ConquerortheCrown and for what it can be used"
+description: "What is ConquerortheCrown and how can we use it"
 image: "../../public/blogs/ctc.png"
 publishedAt: "2024-02-27"
 updatedAt: "2024-02-27"
